--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.4.5",
     "expo-server-sdk": "^3.7.0",
     "express": "^4.18.3",
     "firebase-admin": "^12.0.0",
     "jsonwebtoken": "^9.0.2",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "nodemon": "^3.1.0"
   }
 }
